took out console.log and changed some texts

--- a/src/templates/admins/admins_home.html
+++ b/src/templates/admins/admins_home.html
@@ -16,7 +16,7 @@
                 <p>Where you can switch on/off beacons individual or by organizations</p>
             </div></a>
             <a ui-sref="admins.performance"><div class="col-md-4">
-                <h2><i class="fa fa-pie-chart"></i>Beacon Performance</h2>
+                <h2><i class="fa fa-pie-chart"></i>Beacon Statistics</h2>
                 <p>Inspect statistics on beacon responses, such as numbers of yes/no/null, 
                 	and find out the most commonly used beacons and searched queries.</p>
             </div></a>
