--- a/src/templates/admins/admins_performance.html
+++ b/src/templates/admins/admins_performance.html
@@ -55,7 +55,7 @@
     </div>
     <div class="panel-body">
       <div class="col-lg-2 visual">
-        <donut class="example" data="donutData" nquery="10" name="queries" colors="colors">
+        <donut class="example" data="donutData" nquery="10" name="total:" colors="colors">
       </div>
 
     <div class="filter col-lg-10">  
@@ -178,7 +178,7 @@
 
 
       <div class="visual">
-         <histogram data="data" ytext="# Queries" xtext="Genes" color="rgb(103, 91, 191)" button="sortGeneButton"></histogram> 
+         <histogram data="data2" ytext="# Queries" xtext="Genes" color="rgb(103, 91, 191)" button="sortGeneButton"></histogram> 
          <md-button class="md-raised chart-sort-but sortGeneButton">Sort</md-button>
       </div>
 
