--- a/src/templates/admins/admins_home.html
+++ b/src/templates/admins/admins_home.html
@@ -11,17 +11,17 @@
     <div class="container">
         <div class="row">
 
-            <a ui-sref="admins.control"><div class="col-md-4">
+            <a ui-sref="admins.control"><div class="col-lg-4 dir-box">
                 <h2><i class="fa fa-power-off"></i><span>Beacon Switches<span></h2>
                 <p>Where you can switch on/off beacons individual or by organizations</p>
             </div></a>
-            <a ui-sref="admins.performance"><div class="col-md-4">
+            <a ui-sref="admins.performance"><div class="col-lg-4 dir-box">
                 <h2><i class="fa fa-pie-chart"></i>Beacon Statistics</h2>
                 <p>Inspect statistics on beacon responses, such as numbers of yes/no/null, 
                 	and find out the most commonly used beacons and searched queries.</p>
             </div></a>
 
-             <a ui-sref="admins.genome"><div class="col-md-4">
+             <a ui-sref="admins.genome"><div class="col-lg-4 dir-box">
                 <h2><i class="fa fa-area-chart"></i>Genome Visualization</h2>
                 <p>Look at historical queries on a genomic heatmap</p>
             </div></a>
