made title consistent

--- a/src/templates/admins/admins_control.html
+++ b/src/templates/admins/admins_control.html
@@ -1,7 +1,7 @@
 <div class="section row" ng-controller="BeaconSwitchCtrl">
   <div class="panel">
-    <div class="panel-heading">
-      Admin
+    <div class="panel-heading admin-console-title">
+      Beacons Switches
     </div>
     <div class="panel-body">
       <div id="beacon-control-ui">
