--- a/src/templates/admins/admins_performance.html
+++ b/src/templates/admins/admins_performance.html
@@ -199,6 +199,10 @@
   </div>
 </div>
 
+<div style="font-size: 20px;">
+     <a ui-sref="admins.home"><span class="menu-icon fa fa-fw fa-angle-left"></span>Return to admin homepage</a>
+</div>
+
 
 </div>
 
